--- a/eShopOnWeb.zml/Web.VB/Pages/Shared/Components/BasketComponent/Default.cshtml
+++ b/eShopOnWeb.zml/Web.VB/Pages/Shared/Components/BasketComponent/Default.cshtml
@@ -12,6 +12,6 @@ and will also be deleted with all the code you wrote in it!  --> *@
     <img src="~/images/cart.png" />
   </div>
   <div class="esh-basketstatus-badge">
-      @model.ItemsCount
+      @Model.ItemsCount
   </div>
 </a>
